# hbd_agent

./: AGENTS.md  LICENSE  README.md  agent.md  pyproject.toml
.github/workflows/: tests.yml
defaults/: defaults.json
examples/graphs/: ccpp_base.json  ccpp_reheat.json
examples/run_case/: optimize.json  simulate.json
hbd/: __init__.py
hbd/units/: __init__.py  steam_turbine.py
schemas/: SteamTurbineHP.schema.json  SteamTurbineIP.schema.json  SteamTurbineIPLP.schema.json  SteamTurbineLP.schema.json
scripts/: run_dev.py
src/api/: __init__.py  app.py
src/hbd/: __init__.py  defaults.py  engine.py  models.py  protocols.py
src/hbd/engine/: __init__.py  defaults.py  plant_engine.py  registry.py  thermo.py
src/hbd/units/: __init__.py  steam_turbine.py
tests/: conftest.py
tests/api/: test_metadata_endpoints.py
tests/units/: test_steam_turbine_hp.py  test_steam_turbine_ip.py  test_steam_turbine_lp.py
ui/hbd_designer/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/hbd_designer/src/: App.tsx
ui/hbd_designer/src/components/: GraphCanvas.tsx  PaletteSidebar.tsx  ParameterDialog.tsx  RunSummary.tsx  Toolbar.tsx
ui/hbd_designer/src/hooks/: useDesignerState.ts  usePalette.ts
ui/hbd_designer/src/state/: graph.ts
ui/hbd_designer/src/styles/: index.css
ui/palette/: unit_palette.json
ui/static/: index.html
ui/web/: .eslintrc.cjs  index.html  package.json  vite.config.ts
ui/web/src/: App.tsx  api.ts
ui/web/src/components/: GraphCanvas.tsx  InspectorPanel.tsx  PaletteSidebar.tsx  ParameterDialog.tsx
(+5 files in other folders)
